--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,7 +25,6 @@ website:
           - index.qmd
           - my-profile.qmd
           - getting-started.qmd
-          - schedule.qmd
           
       - section: "**Weekly materials**"
         contents:
@@ -40,7 +39,7 @@ website:
           - href: weeks/week-4.qmd
             text: "Week 4: Exploratory Data Analysis, summary statistics"
           - href: weeks/week-5a.qmd
-            text: "Week 5: ommunicating and Reporting Data"
+            text: "Week 5: Communicating and Reporting"
           - href: weeks/week-5b.qmd
             text: "Week 5: Data Science Toolbox, where to from here?"
 
