--- a/_quarto.yml
+++ b/_quarto.yml
@@ -38,10 +38,10 @@ website:
             text: "Week 3: Data Manipulation"
           - href: weeks/week-4.qmd
             text: "Week 4: Data manipulation Part 2"
-          - href: weeks/week-5a.qmd
-            text: "Week 5: Communicating and Reporting"
-          - href: weeks/week-5b.qmd
-            text: "Week 5: Data Science Toolbox, where to from here?"
+          - href: weeks/week-5.qmd
+            text: "Week 5: Importing data, Reproducible workflows"
+          - href: weeks/week-6.qmd
+            text: "Week 6: Communicating and Reporting Data"
 
  
 format:
